# Maya_cmake_sample_with_node_deformer

./: .gitignore  CMakeLists.txt  README.md  launch_cmake_visual2017.bat  node_deformer_offset.cpp  proj.pro
cmake_modules/: FindMaya.cmake
